@@ -1233,6 +1233,7 @@
 	"otherOptions": "خيارات أخرى",
 	"outgoing": "الصادر",
 	"pan": "طست",
+	"parameters": "<em>Parameters</em>",
 	"parent": "<em>Parent<em>",
 	"parentDescription": "<em>Parent description</em>",
 	"password": "كلمة السر",
