@@ -1233,6 +1233,7 @@
 	"otherOptions": "Weitere optionen",
 	"outgoing": "Ausgehende",
 	"pan": "Schwenken",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Superklasse",
 	"parentDescription": "Beschreibung der Superklasse",
 	"password": "Passwort",
