@@ -1233,6 +1233,7 @@
 	"otherOptions": "Other options",
 	"outgoing": "Outgoing",
 	"pan": "Pan",
+	"parameters": "Parameters",
 	"parent": "Parent",
 	"parentDescription": "Parent description",
 	"password": "Password",
