@@ -1233,6 +1233,7 @@
 	"otherOptions": "Autres options",
 	"outgoing": "Sortie",
 	"pan": "Panoramique",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Parent",
 	"parentDescription": "Description globale",
 	"password": "Mot de passe",
