@@ -1233,6 +1233,7 @@
 	"otherOptions": "Ostale opcije",
 	"outgoing": "<em>Outgoing</em>",
 	"pan": "<em>Pan</em>",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Roditelj",
 	"parentDescription": "Opis roditelja",
 	"password": "<em>Password</em>",
