@@ -1233,6 +1233,7 @@
 	"otherOptions": "Más opciók",
 	"outgoing": "Kimenő",
 	"pan": "Pan",
+	"parameters": "<em>Parameters</em>",
 	"parent": "<em>Parent</em>",
 	"parentDescription": "<em>Parent description</em>",
 	"password": "Jelszó",
