@@ -1233,6 +1233,7 @@
 	"otherOptions": "Andere opties",
 	"outgoing": "Uitgaande",
 	"pan": "Schuiven",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Bovenliggend",
 	"parentDescription": "Bovenliggende omschrijving",
 	"password": "Wachtwoord",
