@@ -1233,6 +1233,7 @@
 	"otherOptions": "Outras Opções",
 	"outgoing": "<em>Outgoing</em>",
 	"pan": "<em>Pan</em>",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Pai",
 	"parentDescription": "Descrição do pai",
 	"password": "<em>Password</em>",
