@@ -1233,6 +1233,7 @@
 	"otherOptions": "Outras opções",
 	"outgoing": "Saída",
 	"pan": "Deslocar",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Pai",
 	"parentDescription": "Descrição do pai",
 	"password": "Password",
