@@ -1233,6 +1233,7 @@
 	"otherOptions": "Другие настройки",
 	"outgoing": "Исходящая почта",
 	"pan": "Переместить",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Родитель",
 	"parentDescription": "Родитель",
 	"password": "Пароль",
