@@ -1233,6 +1233,7 @@
 	"otherOptions": "Ostale opcije",
 	"outgoing": "Odlazne",
 	"pan": "Pomeranje",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Roditelj",
 	"parentDescription": "Opis roditelja",
 	"password": "Lozinka",
