@@ -1233,6 +1233,7 @@
 	"otherOptions": "Những chọn lựa khác",
 	"outgoing": "<em>Outgoing</em>",
 	"pan": "<em>Pan</em>",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Trước đó",
 	"parentDescription": "Mô tả trước",
 	"password": "<em>Password</em>",
